--- a/.gitignore
+++ b/.gitignore
@@ -1,66 +1,22 @@
-# Python
-__pycache__/
-*.py[cod]
-*$py.class
-*.so
-.Python
-.pythonlibs/
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-.venv/
-venv/
-ENV/
-
-# Node.js
-node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.pnpm-debug.log*
+# Node
+frontend/node_modules/
 frontend/dist/
 
-# IDE
-.idea/
-.vscode/
-*.swp
-*.swo
-*~
+# Python
+**/__pycache__/
+*.pyc
+.venv/
+env/
 
-# Environment
+# Local data persistence
+backend/data/uploads/
+backend/data/courses/
+backend/milvus_data.db
+
+# Local environment
 .env
-.env.local
-.env.*.local
 
-# Milvus local data
-milvus_data.db
-*.db
-
-# OS
+# OS/IDE
 .DS_Store
 Thumbs.db
-
-# Logs
-logs/
-*.log
-
-# Temp files
-tmp/
-temp/
-*.tmp
-
-# UV
-.uv/
-uv.lock
+.vscode/
